--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start:frontend": "react-scripts start",
     "start:backend": "nodemon server.js",
