--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "start:frontend": "react-scripts start",
     "start:backend": "nodemon server.js",
     "start": "node server",
-    "test": "react-scripts test",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
