--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
+  "main": "server.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "start:frontend": "react-scripts start",
     "start:backend": "nodemon server.js",
     "start": "node server",
     "test": "react-scripts test"
